cmake_minimum_required(VERSION 3.21)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

project(ACCELERATED_CPP CXX)

add_executable(exercise_0_0 exercise_0_0.cpp)
add_executable(exercise_0_1 exercise_0_1.cpp)
add_executable(exercise_0_2 exercise_0_2.cpp)