cmake_minimum_required(VERSION 3.21)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

project(ACCELERATED_CPP CXX)

add_executable(exercise_0_0 exercise_0_0.cpp)
add_executable(exercise_0_1 exercise_0_1.cpp)
add_executable(exercise_0_2 exercise_0_2.cpp)
add_executable(exercise_0_3 exercise_0_3.cpp)
add_executable(exercise_0_4 exercise_0_4.cpp)
add_executable(exercise_0_5 exercise_0_5.cpp)
add_executable(exercise_0_6 exercise_0_6.cpp)
add_executable(exercise_0_7 exercise_0_7.cpp)
add_executable(exercise_0_8 exercise_0_8.cpp)
add_executable(exercise_0_9 exercise_0_9.cpp)
add_executable(exercise_0_10 exercise_0_10.cpp)
add_executable(exercise_1_0 exercise_1_0.cpp)
add_executable(exercise_1_1 exercise_1_1.cpp)
add_executable(exercise_1_2 exercise_1_2.cpp)
add_executable(exercise_1_3 exercise_1_3.cpp)
add_executable(exercise_1_4_A exercise_1_4_A.cpp)
add_executable(exercise_1_4_B exercise_1_4_B.cpp)
