project(Chapter-02)
add_subdirectory(02-01)
add_subdirectory(02-02)
add_subdirectory(02-03)
add_subdirectory(02-04)
add_subdirectory(02-05)
add_subdirectory(02-06)
add_subdirectory(02-07)
add_subdirectory(02-08)
add_subdirectory(02-09)
add_subdirectory(02-10)
add_subdirectory(02-11)
add_subdirectory(02-12)
add_subdirectory(02-13)
add_subdirectory(02-14)
add_subdirectory(02-15)
add_subdirectory(02-16)
add_subdirectory(02-17)
add_subdirectory(02-18)
add_subdirectory(02-19)
add_subdirectory(02-20)
add_subdirectory(02-21)
add_subdirectory(02-22)
add_subdirectory(02-23)
add_subdirectory(02-24)
add_subdirectory(02-25)
add_subdirectory(02-26)
add_subdirectory(02-27)
add_subdirectory(02-28)
add_subdirectory(02-29)
add_subdirectory(02-30)
add_subdirectory(02-31)
add_subdirectory(02-32)
add_subdirectory(02-33)
add_subdirectory(02-34)
add_subdirectory(02-35)
add_subdirectory(02-36)
add_subdirectory(02-37)
add_subdirectory(02-38)
add_subdirectory(02-39)
add_subdirectory(02-40)
add_subdirectory(02-41)
add_subdirectory(02-42)
