project(Chapter-04)
add_subdirectory(04-01)
add_subdirectory(04-02)
add_subdirectory(04-03)
add_subdirectory(04-04)
add_subdirectory(04-05)
add_subdirectory(04-06)
add_subdirectory(04-07)
add_subdirectory(04-08)
add_subdirectory(04-09)
add_subdirectory(04-10)
add_subdirectory(04-11)
add_subdirectory(04-12)
add_subdirectory(04-13)
add_subdirectory(04-14)
add_subdirectory(04-15)
add_subdirectory(04-16)
add_subdirectory(04-17)
add_subdirectory(04-18)
add_subdirectory(04-19)
add_subdirectory(04-20)
add_subdirectory(04-21)
add_subdirectory(04-22)
add_subdirectory(04-23)
add_subdirectory(04-24)
add_subdirectory(04-25)
add_subdirectory(04-26)
add_subdirectory(04-27)
add_subdirectory(04-28)
add_subdirectory(04-29)
add_subdirectory(04-30)
add_subdirectory(04-31)
add_subdirectory(04-32)
add_subdirectory(04-33)
add_subdirectory(04-34)
add_subdirectory(04-35)
add_subdirectory(04-36)
add_subdirectory(04-37)
add_subdirectory(04-38)
