project(Chapter-07)
add_subdirectory(07-01)
add_subdirectory(07-02)
add_subdirectory(07-03)
add_subdirectory(07-04)
add_subdirectory(07-05)
add_subdirectory(07-06)
add_subdirectory(07-07)
add_subdirectory(07-08)
add_subdirectory(07-09)
add_subdirectory(07-10)
add_subdirectory(07-11)
add_subdirectory(07-12)
add_subdirectory(07-13)
add_subdirectory(07-14)
add_subdirectory(07-15)
add_subdirectory(07-16)
add_subdirectory(07-17)
add_subdirectory(07-18)
add_subdirectory(07-19)
add_subdirectory(07-20)
add_subdirectory(07-21)
add_subdirectory(07-22)
add_subdirectory(07-23)
add_subdirectory(07-24)
add_subdirectory(07-25)
add_subdirectory(07-26)
add_subdirectory(07-27)
add_subdirectory(07-28)
add_subdirectory(07-29)
add_subdirectory(07-30)
add_subdirectory(07-31)
add_subdirectory(07-32)
add_subdirectory(07-33)
add_subdirectory(07-34)
add_subdirectory(07-35)
add_subdirectory(07-36)
add_subdirectory(07-37)
add_subdirectory(07-38)
add_subdirectory(07-39)
add_subdirectory(07-40)
add_subdirectory(07-41)
add_subdirectory(07-42)
add_subdirectory(07-43)
add_subdirectory(07-44)
add_subdirectory(07-45)
add_subdirectory(07-46)
add_subdirectory(07-47)
add_subdirectory(07-48)
add_subdirectory(07-49)
add_subdirectory(07-50)
add_subdirectory(07-51)
add_subdirectory(07-52)
add_subdirectory(07-53)
add_subdirectory(07-54)
add_subdirectory(07-55)
add_subdirectory(07-56)
add_subdirectory(07-57)
add_subdirectory(07-58)
