project(Chapter-10)
add_subdirectory(10-01)
add_subdirectory(10-02)
add_subdirectory(10-03)
add_subdirectory(10-04)
add_subdirectory(10-05)
add_subdirectory(10-06)
add_subdirectory(10-07)
add_subdirectory(10-08)
add_subdirectory(10-09)
add_subdirectory(10-10)
add_subdirectory(10-11)
add_subdirectory(10-12)
add_subdirectory(10-13)
add_subdirectory(10-14)
add_subdirectory(10-15)
add_subdirectory(10-16)
add_subdirectory(10-17)
add_subdirectory(10-18)
add_subdirectory(10-19)
add_subdirectory(10-20)
add_subdirectory(10-21)
add_subdirectory(10-22)
add_subdirectory(10-23)
add_subdirectory(10-24)
add_subdirectory(10-25)
# add_subdirectory(10-26)
# add_subdirectory(10-27)
# add_subdirectory(10-28)
# add_subdirectory(10-29)
# add_subdirectory(10-30)
# add_subdirectory(10-31)
# add_subdirectory(10-32)
# add_subdirectory(10-33)
# add_subdirectory(10-34)
# add_subdirectory(10-35)
# add_subdirectory(10-36)
# add_subdirectory(10-37)
# add_subdirectory(10-38)
# add_subdirectory(10-39)
# add_subdirectory(10-40)
# add_subdirectory(10-41)
# add_subdirectory(10-42)
# add_subdirectory(10-43)
# add_subdirectory(10-44)
# add_subdirectory(10-45)
# add_subdirectory(10-46)
# add_subdirectory(10-47)
# add_subdirectory(10-48)
# add_subdirectory(10-49)
# add_subdirectory(10-50)
# add_subdirectory(10-51)
# add_subdirectory(10-52)
