project(Chapter1)

add_executable(_1_1 _1_1.cpp)
add_executable(_1_2 _1_2.cpp)
add_executable(_1_3 _1_3.cpp)
add_executable(_1_4 _1_4.cpp)
add_executable(_1_5 _1_5.cpp)
add_executable(_1_6 _1_6.cpp)
add_executable(_1_7 _1_7.cpp)
add_executable(_1_8 _1_8.cpp)
add_executable(_1_9 _1_9.cpp)
add_executable(_1_10 _1_10.cpp)
add_executable(_1_11 _1_11.cpp)
add_executable(_1_12 _1_12.cpp)
add_executable(_1_13 _1_13.cpp)
add_executable(_1_14 _1_14.cpp)
add_executable(_1_15 _1_15.cpp)
add_executable(_1_16 _1_16.cpp)
add_executable(_1_17 _1_17.cpp)
add_executable(_1_18 _1_18.cpp)
add_executable(_1_19 _1_19.cpp)
add_executable(_1_20 _1_20.cpp Sales_item.h)
add_executable(_1_21 _1_21.cpp Sales_item.h)
add_executable(_1_22 _1_22.cpp Sales_item.h)
add_executable(_1_23 _1_23.cpp Sales_item.h)
add_executable(_1_24 _1_24.cpp)
add_executable(_1_25 _1_25.cpp Sales_item.h)