project(Chapter1)

add_executable(_01_01 _01_01.cpp)
add_executable(_01_02 _01_02.cpp)
add_executable(_01_03 _01_03.cpp)
add_executable(_01_04 _01_04.cpp)
add_executable(_01_05 _01_05.cpp)
add_executable(_01_06 _01_06.cpp)
add_executable(_01_07 _01_07.cpp)
add_executable(_01_08 _01_08.cpp)
add_executable(_01_09 _01_09.cpp)
add_executable(_01_10 _01_10.cpp)
add_executable(_01_11 _01_11.cpp)
add_executable(_01_12 _01_12.cpp)
add_executable(_01_13 _01_13.cpp)
add_executable(_01_14 _01_14.cpp)
add_executable(_01_15 _01_15.cpp)
add_executable(_01_16 _01_16.cpp)
add_executable(_01_17 _01_17.cpp)
add_executable(_01_18 _01_18.cpp)
add_executable(_01_19 _01_19.cpp)
add_executable(_01_20 _01_20.cpp Sales_item.h)
add_executable(_01_21 _01_21.cpp Sales_item.h)
add_executable(_01_22 _01_22.cpp Sales_item.h)
add_executable(_01_23 _01_23.cpp Sales_item.h)
add_executable(_01_24 _01_24.cpp Sales_item.h)
add_executable(_01_25 _01_25.cpp Sales_item.h)