cmake_minimum_required(VERSION 3.20)

project(Chapter12)

add_definitions(-std=c++11)


add_executable(_12_01 _12_01.cpp)
# add_executable(_12_02 _12_02.cpp)
# add_executable(_12_03 _12_03.cpp)
# add_executable(_12_04 _12_04.cpp)
# add_executable(_12_05 _12_05.cpp)
# add_executable(_12_06 _12_06.cpp)
# add_executable(_12_07 _12_07.cpp)
# add_executable(_12_08 _12_08.cpp)
# add_executable(_12_09 _12_09.cpp)
# add_executable(_12_10 _12_10.cpp)
# add_executable(_12_11 _12_11.cpp)
# add_executable(_12_12 _12_12.cpp)
# add_executable(_12_13 _12_13.cpp)
# add_executable(_12_14 _12_14.cpp)
# add_executable(_12_15 _12_15.cpp)
# add_executable(_12_16 _12_16.cpp)
# add_executable(_12_17 _12_17.cpp)
# add_executable(_12_18 _12_18.cpp)
# add_executable(_12_19 _12_19.cpp)
# add_executable(_12_20 _12_20.cpp)
# add_executable(_12_21 _12_21.cpp)
# add_executable(_12_22 _12_22.cpp)
#add_executable(_12_23 _12_23.cpp)
#add_executable(_12_24 _12_24.cpp)
#add_executable(_12_25 _12_25.cpp)
#add_executable(_12_26 _12_26.cpp)
#add_executable(_12_27 _12_27.cpp)
#add_executable(_12_28 _12_28.cpp)
#add_executable(_12_29 _12_29.cpp)
#add_executable(_12_30 _12_30.cpp)
#add_executable(_12_31 _12_31.cpp)
#add_executable(_12_32 _12_32.cpp)
#add_executable(_12_33 _12_33.cpp)
#add_executable(_12_34 _12_34.cpp)
#add_executable(_12_35 _12_35.cpp)
#add_executable(_12_36 _12_36.cpp)
#add_executable(_12_37 _12_37.cpp)
#add_executable(_12_38 _12_38.cpp)
#add_executable(_12_39 _12_39.cpp)
#add_executable(_12_40 _12_40.cpp)
#add_executable(_12_41 _12_41.cpp)
#add_executable(_12_42 _12_42.cpp)
#add_executable(_12_43 _12_43.cpp)
#add_executable(_12_44 _12_44.cpp)
#add_executable(_12_45 _12_45.cpp)
#add_executable(_12_46 _12_46.cpp)
#add_executable(_12_47 _12_47.cpp)
#add_executable(_12_48 _12_48.cpp)
#add_executable(_12_49 _12_49.cpp)
#add_executable(_12_50 _12_50.cpp)
#add_executable(_12_51 _12_51.cpp)
#add_executable(_12_52 _12_52.cpp)