cmake_minimum_required(VERSION 3.20)

project(Chapter13)

add_definitions(-std=c++11)


add_executable(_13_01 _13_01.cpp)
add_executable(_13_02 _13_02.cpp)
add_executable(_13_03 _13_03.cpp)
add_executable(_13_04 _13_04.cpp)
# add_executable(_13_05 _13_05.cpp)
# add_executable(_13_06 _13_06.cpp)
# add_executable(_13_07 _13_07.cpp)
# add_executable(_13_08 _13_08.cpp)
# add_executable(_13_09 _13_09.cpp)
# add_executable(_13_10 _13_10.cpp)
# add_executable(_13_11 _13_11.cpp)
# add_executable(_13_12 _13_12.cpp)
# add_executable(_13_13 _13_13.cpp)
# add_executable(_13_14 _13_14.cpp)
# add_executable(_13_15 _13_15.cpp)
# add_executable(_13_16 _13_16.cpp)
# add_executable(_13_17 _13_17.cpp)
# add_executable(_13_18 _13_18.cpp)
# add_executable(_13_19 _13_19.cpp)
# add_executable(_13_20 _13_20.cpp)
# add_executable(_13_21 _13_21.cpp)
# add_executable(_13_22 _13_22.cpp)
#add_executable(_13_23 _13_23.cpp)
#add_executable(_13_24 _13_24.cpp)
#add_executable(_13_25 _13_25.cpp)
#add_executable(_13_26 _13_26.cpp)
#add_executable(_13_27 _13_27.cpp)
#add_executable(_13_28 _13_28.cpp)
#add_executable(_13_29 _13_29.cpp)
#add_executable(_13_30 _13_30.cpp)
#add_executable(_13_31 _13_31.cpp)
#add_executable(_13_32 _13_32.cpp)
#add_executable(_13_33 _13_33.cpp)
#add_executable(_13_34 _13_34.cpp)
#add_executable(_13_35 _13_35.cpp)
#add_executable(_13_36 _13_36.cpp)
#add_executable(_13_37 _13_37.cpp)
#add_executable(_13_38 _13_38.cpp)
#add_executable(_13_39 _13_39.cpp)
#add_executable(_13_40 _13_40.cpp)
#add_executable(_13_41 _13_41.cpp)
#add_executable(_13_42 _13_42.cpp)
#add_executable(_13_43 _13_43.cpp)
#add_executable(_13_44 _13_44.cpp)
#add_executable(_13_45 _13_45.cpp)
#add_executable(_13_46 _13_46.cpp)
#add_executable(_13_47 _13_47.cpp)
#add_executable(_13_48 _13_48.cpp)
#add_executable(_13_49 _13_49.cpp)
#add_executable(_13_50 _13_50.cpp)
#add_executable(_13_51 _13_51.cpp)
#add_executable(_13_52 _13_52.cpp)