project(Chapter2)

add_executable(_02_01 _02_01.cpp)
add_executable(_02_02 _02_02.cpp)
add_executable(_02_03 _02_03.cpp)
add_executable(_02_04 _02_04.cpp)
add_executable(_02_05 _02_05.cpp)
add_executable(_02_06 _02_06.cpp)
add_executable(_02_07 _02_07.cpp)
add_executable(_02_08 _02_08.cpp)
add_executable(_02_09 _02_09.cpp)
add_executable(_02_10 _02_10.cpp)
add_executable(_02_11 _02_11.cpp)
add_executable(_02_12 _02_12.cpp)
add_executable(_02_13 _02_13.cpp)
add_executable(_02_14 _02_14.cpp)
add_executable(_02_15 _02_15.cpp)
add_executable(_02_16 _02_16.cpp)
add_executable(_02_17 _02_17.cpp)
add_executable(_02_18 _02_18.cpp)
add_executable(_02_19 _02_19.cpp)
add_executable(_02_20 _02_20.cpp)
add_executable(_02_21 _02_21.cpp)
add_executable(_02_22 _02_22.cpp)
add_executable(_02_23 _02_23.cpp)
add_executable(_02_24 _02_24.cpp)
add_executable(_02_25 _02_25.cpp)
add_executable(_02_26 _02_26.cpp)
add_executable(_02_27 _02_27.cpp)
add_executable(_02_28 _02_28.cpp)
add_executable(_02_29 _02_29.cpp)
add_executable(_02_30 _02_30.cpp)
add_executable(_02_31 _02_31.cpp)
add_executable(_02_32 _02_32.cpp)
add_executable(_02_33 _02_33.cpp)
add_executable(_02_34 _02_34.cpp)
add_executable(_02_35 _02_35.cpp)
add_executable(_02_36 _02_36.cpp)
add_executable(_02_37 _02_37.cpp)
add_executable(_02_38 _02_38.cpp)
add_executable(_02_39 _02_39.cpp)
add_executable(_02_40 _02_40.cpp)
add_executable(_02_41 _02_41.cpp)
add_executable(_02_42 _02_42.cpp)
