cmake_minimum_required(VERSION 3.20)

project(Chapter3)

add_definitions(-std=c++11)

add_executable(_03_01 _03_01.cpp)
add_executable(_03_02 _03_02.cpp)
add_executable(_03_03 _03_03.cpp)
add_executable(_03_04 _03_04.cpp)
add_executable(_03_05 _03_05.cpp)
add_executable(_03_06 _03_06.cpp)
add_executable(_03_07 _03_07.cpp)
add_executable(_03_08 _03_08.cpp)
add_executable(_03_09 _03_09.cpp)
add_executable(_03_10 _03_10.cpp)
add_executable(_03_11 _03_11.cpp)
add_executable(_03_12 _03_12.cpp)
add_executable(_03_13 _03_13.cpp)
add_executable(_03_14 _03_14.cpp)
add_executable(_03_15 _03_15.cpp)
add_executable(_03_16 _03_16.cpp)
add_executable(_03_17 _03_17.cpp)
add_executable(_03_18 _03_18.cpp)
add_executable(_03_19 _03_19.cpp)
add_executable(_03_20 _03_20.cpp)
add_executable(_03_21 _03_21.cpp)
add_executable(_03_22 _03_22.cpp)
add_executable(_03_23 _03_23.cpp)
add_executable(_03_24 _03_24.cpp)
add_executable(_03_25 _03_25.cpp)
add_executable(_03_26 _03_26.cpp)
add_executable(_03_27 _03_27.cpp)
add_executable(_03_28 _03_28.cpp)
add_executable(_03_29 _03_29.cpp)
add_executable(_03_30 _03_30.cpp)
add_executable(_03_31 _03_31.cpp)
add_executable(_03_32 _03_32.cpp)
add_executable(_03_33 _03_33.cpp)
add_executable(_03_34 _03_34.cpp)
add_executable(_03_35 _03_35.cpp)
add_executable(_03_36 _03_36.cpp)
add_executable(_03_37 _03_37.cpp)
add_executable(_03_38 _03_38.cpp)
add_executable(_03_39 _03_39.cpp)
add_executable(_03_40 _03_40.cpp)
add_executable(_03_41 _03_41.cpp)
add_executable(_03_42 _03_42.cpp)
add_executable(_03_43 _03_43.cpp)
add_executable(_03_44 _03_44.cpp)
add_executable(_03_45 _03_45.cpp)