cmake_minimum_required(VERSION 3.20)

project(Chapter4)

add_definitions(-std=c++11)

add_executable(_04_01 _04_01.cpp)
add_executable(_04_02 _04_02.cpp)
add_executable(_04_04 _04_04.cpp)
add_executable(_04_05 _04_05.cpp)
add_executable(_04_06 _04_06.cpp)
add_executable(_04_07 _04_07.cpp)
add_executable(_04_08 _04_08.cpp)
add_executable(_04_09 _04_09.cpp)
add_executable(_04_10 _04_10.cpp)
add_executable(_04_11 _04_11.cpp)
add_executable(_04_12 _04_12.cpp)
add_executable(_04_13 _04_13.cpp)
add_executable(_04_14 _04_14.cpp)
add_executable(_04_15 _04_15.cpp)
add_executable(_04_16 _04_16.cpp)
add_executable(_04_17 _04_17.cpp)
add_executable(_04_18 _04_18.cpp)
add_executable(_04_19 _04_19.cpp)
add_executable(_04_20 _04_20.cpp)
add_executable(_04_21 _04_21.cpp)
add_executable(_04_22 _04_22.cpp)
add_executable(_04_23 _04_23.cpp)
add_executable(_04_24 _04_24.cpp)
add_executable(_04_25 _04_25.cpp)
add_executable(_04_26 _04_26.cpp)
add_executable(_04_27 _04_27.cpp)
add_executable(_04_28 _04_28.cpp)
add_executable(_04_29 _04_29.cpp)
add_executable(_04_30 _04_30.cpp)
add_executable(_04_31 _04_31.cpp)
add_executable(_04_32 _04_32.cpp)
add_executable(_04_33 _04_33.cpp)
add_executable(_04_34 _04_34.cpp)
add_executable(_04_35 _04_35.cpp)
add_executable(_04_36 _04_36.cpp)
add_executable(_04_37 _04_37.cpp)
add_executable(_04_38 _04_38.cpp)
