cmake_minimum_required(VERSION 3.20)

project(Chapter5)

add_definitions(-std=c++11)

add_executable(_05_01 _05_01.cpp)
add_executable(_05_02 _05_02.cpp)
add_executable(_05_03 _05_03.cpp)
add_executable(_05_04 _05_04.cpp)
add_executable(_05_05 _05_05.cpp)
add_executable(_05_06 _05_06.cpp)
add_executable(_05_07 _05_07.cpp)
add_executable(_05_08 _05_08.cpp)
add_executable(_05_09 _05_09.cpp)
add_executable(_05_10 _05_10.cpp)
add_executable(_05_11 _05_11.cpp)
add_executable(_05_12 _05_12.cpp)
add_executable(_05_13 _05_13.cpp)
add_executable(_05_14 _05_14.cpp)
add_executable(_05_15 _05_15.cpp)
add_executable(_05_16 _05_16.cpp)
add_executable(_05_17 _05_17.cpp)
add_executable(_05_18 _05_18.cpp)
add_executable(_05_19 _05_19.cpp)
add_executable(_05_20 _05_20.cpp)
add_executable(_05_21 _05_21.cpp)
add_executable(_05_22 _05_22.cpp)
add_executable(_05_23 _05_23.cpp)
add_executable(_05_24 _05_24.cpp)
add_executable(_05_25 _05_25.cpp)
