project(Chapter6)

add_executable(_06_01 _06_01.cpp)
add_executable(_06_02 _06_02.cpp)
add_executable(_06_03 _06_03.cpp)
add_executable(_06_04 _06_04.cpp)
add_executable(_06_05 _06_05.cpp)
add_executable(_06_06 _06_06.cpp)
add_executable(_06_07 _06_07.cpp)
add_executable(_06_08 _06_08.cpp)
add_executable(_06_09 _06_09.cpp fact.cpp factMain.cpp Chapter6.h)
add_executable(_06_10 _06_10.cpp)
add_executable(_06_11 _06_11.cpp)
add_executable(_06_12 _06_12.cpp)
add_executable(_06_13 _06_13.cpp)
add_executable(_06_14 _06_14.cpp)
add_executable(_06_15 _06_15.cpp)
add_executable(_06_16 _06_16.cpp)
add_executable(_06_17 _06_17.cpp)
add_executable(_06_18 _06_18.cpp)
add_executable(_06_19 _06_19.cpp)
add_executable(_06_20 _06_20.cpp)
add_executable(_06_21 _06_21.cpp)
add_executable(_06_22 _06_22.cpp)
add_executable(_06_23 _06_23.cpp)
add_executable(_06_24 _06_24.cpp)
add_executable(_06_25 _06_25.cpp)
add_executable(_06_26 _06_26.cpp)
add_executable(_06_27 _06_27.cpp)
add_executable(_06_28 _06_28.cpp)
add_executable(_06_29 _06_29.cpp)
add_executable(_06_30 _06_30.cpp)
add_executable(_06_31 _06_31.cpp)
add_executable(_06_32 _06_32.cpp)
add_executable(_06_33 _06_33.cpp)
add_executable(_06_34 _06_34.cpp)
add_executable(_06_35 _06_35.cpp)
add_executable(_06_36 _06_36.cpp)
add_executable(_06_37 _06_37.cpp)
add_executable(_06_38 _06_38.cpp)
add_executable(_06_39 _06_39.cpp)
add_executable(_06_40 _06_40.cpp)
add_executable(_06_41 _06_41.cpp)
add_executable(_06_42 _06_42.cpp)
add_executable(_06_43 _06_43.cpp)
add_executable(_06_44 _06_44.cpp)
add_executable(_06_45 _06_45.cpp)
add_executable(_06_46 _06_46.cpp)
add_executable(_06_47 _06_47.cpp)
add_executable(_06_48 _06_48.cpp)
add_executable(_06_49 _06_49.cpp)
add_executable(_06_50 _06_50.cpp)
add_executable(_06_51 _06_51.cpp)
add_executable(_06_52 _06_52.cpp)
add_executable(_06_53 _06_53.cpp)
add_executable(_06_54 _06_54.cpp)
add_executable(_06_55 _06_55.cpp)
add_executable(_06_56 _06_56.cpp)