project(Chapter8)

add_executable(_08_01 _08_01.cpp)
add_executable(_08_02 _08_02.cpp)
add_executable(_08_03 _08_03.cpp)
add_executable(_08_04 _08_04.cpp)
add_executable(_08_05 _08_05.cpp)
#add_executable(_08_06 _08_06.cpp)
#add_executable(_08_07 _08_07.cpp)
#add_executable(_08_08 _08_08.cpp)
#add_executable(_08_09 _08_09.cpp)
#add_executable(_08_10 _08_10.cpp)
#add_executable(_08_11 _08_11.cpp)
#add_executable(_08_12 _08_12.cpp)
#add_executable(_08_13 _08_13.cpp)
#add_executable(_08_14 _08_14.cpp)
#add_executable(_08_15 _08_15.cpp)
#add_executable(_08_16 _08_16.cpp)
#add_executable(_08_17 _08_17.cpp)
#add_executable(_08_18 _08_18.cpp)
#add_executable(_08_19 _08_19.cpp)
#add_executable(_08_20 _08_20.cpp)
#add_executable(_08_21 _08_21.cpp)
#add_executable(_08_22 _08_22.cpp)
#add_executable(_08_23 _08_23.cpp)
#add_executable(_08_24 _08_24.cpp)
#add_executable(_08_25 _08_25.cpp)
#add_executable(_08_26 _08_26.cpp)
#add_executable(_08_27 _08_27.cpp)
#add_executable(_08_28 _08_28.cpp)
#add_executable(_08_29 _08_29.cpp)
#add_executable(_08_30 _08_30.cpp)
#add_executable(_08_31 _08_31.cpp)
#add_executable(_08_32 _08_32.cpp)
#add_executable(_08_33 _08_33.cpp)
#add_executable(_08_34 _08_34.cpp)
#add_executable(_08_35 _08_35.cpp)
#add_executable(_08_36 _08_36.cpp)
#add_executable(_08_37 _08_37.cpp)
#add_executable(_08_38 _08_38.cpp)
#add_executable(_08_39 _08_39.cpp)
#add_executable(_08_40 _08_40.cpp)
#add_executable(_08_41 _08_41.cpp)
#add_executable(_08_42 _08_42.cpp)
#add_executable(_08_43 _08_43.cpp)
#add_executable(_08_44 _08_44.cpp)
#add_executable(_08_45 _08_45.cpp)
#add_executable(_08_46 _08_46.cpp)
#add_executable(_08_47 _08_47.cpp)
#add_executable(_08_48 _08_48.cpp)
#add_executable(_08_49 _08_49.cpp)
#add_executable(_08_50 _08_50.cpp)
#add_executable(_08_51 _08_51.cpp)
#add_executable(_08_52 _08_52.cpp)
#add_executable(_08_53 _08_53.cpp)
#add_executable(_08_54 _08_54.cpp)
#add_executable(_08_55 _08_55.cpp)
#add_executable(_08_56 _08_56.cpp)
#add_executable(_08_57 _08_57.cpp)
#add_executable(_08_58 _08_58.cpp)