cmake_minimum_required(VERSION 3.20)

project(Chapter8)

add_definitions(-std=c++11)

add_executable(_08_01 _08_01.cpp)
add_executable(_08_02 _08_02.cpp)
add_executable(_08_03 _08_03.cpp)
add_executable(_08_04 _08_04.cpp)
add_executable(_08_05 _08_05.cpp)
add_executable(_08_06 _08_06.cpp)
add_executable(_08_07 _08_07.cpp)
add_executable(_08_08 _08_08.cpp)
add_executable(_08_09 _08_09.cpp)
add_executable(_08_10 _08_10.cpp)
add_executable(_08_11 _08_11.cpp)
add_executable(_08_12 _08_12.cpp)
add_executable(_08_13 _08_13.cpp)
add_executable(_08_14 _08_14.cpp)
