project(Chapter9)


add_executable(_09_01 _09_01.cpp)
add_executable(_09_02 _09_02.cpp)
add_executable(_09_03 _09_03.cpp)
add_executable(_09_04 _09_04.cpp)
add_executable(_09_05 _09_05.cpp)
add_executable(_09_06 _09_06.cpp)
add_executable(_09_07 _09_07.cpp)
add_executable(_09_08 _09_08.cpp)
add_executable(_09_09 _09_09.cpp)
add_executable(_09_10 _09_10.cpp)
add_executable(_09_11 _09_11.cpp)
add_executable(_09_12 _09_12.cpp)
add_executable(_09_13 _09_13.cpp)
add_executable(_09_14 _09_14.cpp)
add_executable(_09_15 _09_15.cpp)
add_executable(_09_16 _09_16.cpp)
add_executable(_09_17 _09_17.cpp)
#add_executable(_09_18 _09_18.cpp)
#add_executable(_09_19 _09_19.cpp)
#add_executable(_09_20 _09_20.cpp)
#add_executable(_09_21 _09_21.cpp)
#add_executable(_09_22 _09_22.cpp)
#add_executable(_09_23 _09_23.cpp)
#add_executable(_09_24 _09_24.cpp)
#add_executable(_09_25 _09_25.cpp)
#add_executable(_09_26 _09_26.cpp)
#add_executable(_09_27 _09_27.cpp)
#add_executable(_09_28 _09_28.cpp)
#add_executable(_09_29 _09_29.cpp)
#add_executable(_09_30 _09_30.cpp)
#add_executable(_09_31 _09_31.cpp)
#add_executable(_09_32 _09_32.cpp)
#add_executable(_09_33 _09_33.cpp)
#add_executable(_09_34 _09_34.cpp)
#add_executable(_09_35 _09_35.cpp)
#add_executable(_09_36 _09_36.cpp)
#add_executable(_09_37 _09_37.cpp)
#add_executable(_09_38 _09_38.cpp)
#add_executable(_09_39 _09_39.cpp)
#add_executable(_09_40 _09_40.cpp)
#add_executable(_09_41 _09_41.cpp)
#add_executable(_09_42 _09_42.cpp)
#add_executable(_09_43 _09_43.cpp)
#add_executable(_09_44 _09_44.cpp)
#add_executable(_09_45 _09_45.cpp)
#add_executable(_09_46 _09_46.cpp)
#add_executable(_09_47 _09_47.cpp)
#add_executable(_09_48 _09_48.cpp)
#add_executable(_09_49 _09_49.cpp)
#add_executable(_09_50 _09_50.cpp)
#add_executable(_09_51 _09_51.cpp)
#add_executable(_09_52 _09_52.cpp)