project(Chapter7)

add_executable(_07_01 _07_01.cpp)
add_executable(_07_02 _07_02.cpp)
add_executable(_07_03 _07_03.cpp)
add_executable(_07_04 _07_04.cpp)
add_executable(_07_05 _07_05.cpp)
add_executable(_07_06 _07_06.cpp)
add_executable(_07_07 _07_07.cpp)
add_executable(_07_08 _07_08.cpp)
add_executable(_07_09 _07_09.cpp)
add_executable(_07_10 _07_10.cpp)

