project(Chapter7)

add_executable(_07_01 _07_01.cpp)
add_executable(_07_02 _07_02.cpp)
add_executable(_07_03 _07_03.cpp)
add_executable(_07_04 _07_04.cpp)
add_executable(_07_05 _07_05.cpp)
add_executable(_07_06 _07_06.cpp)
add_executable(_07_07 _07_07.cpp)
add_executable(_07_08 _07_08.cpp)
add_executable(_07_09 _07_09.cpp)
add_executable(_07_10 _07_10.cpp)
add_executable(_07_11 _07_11.cpp)
add_executable(_07_12 _07_12.cpp)
add_executable(_07_13 _07_13.cpp)
add_executable(_07_14 _07_14.cpp)
add_executable(_07_15 _07_15.cpp)
add_executable(_07_16 _07_16.cpp)
add_executable(_07_17 _07_17.cpp)
add_executable(_07_18 _07_18.cpp)
add_executable(_07_19 _07_19.cpp)
add_executable(_07_20 _07_20.cpp)
add_executable(_07_21 _07_21.cpp)
add_executable(_07_22 _07_22.cpp)
add_executable(_07_23 _07_23.cpp)
add_executable(_07_24 _07_24.cpp)
add_executable(_07_25 _07_25.cpp)
add_executable(_07_26 _07_26.cpp)
add_executable(_07_27 _07_27.cpp)
add_executable(_07_28 _07_28.cpp)
add_executable(_07_29 _07_29.cpp)
add_executable(_07_30 _07_30.cpp)
add_executable(_07_31 _07_31.cpp)
add_executable(_07_32 _07_32.cpp)
add_executable(_07_33 _07_33.cpp)
add_executable(_07_34 _07_34.cpp)
add_executable(_07_35 _07_35.cpp)
add_executable(_07_36 _07_36.cpp)
add_executable(_07_37 _07_37.cpp)
add_executable(_07_38 _07_38.cpp)
add_executable(_07_39 _07_39.cpp)
add_executable(_07_40 _07_40.cpp)