cmake_minimum_required(VERSION 3.21)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(CMAKE_EXPORT_COMPILE_COMMANDS True)

project(LEETCODE CXX)

# include dir
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# add library
file(GLOB_RECURSE SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
add_library(LEETCODE_SOLUTION STATIC ${SRC_LIST})
