project(Chapter-1)

add_subdirectory(01-01)
add_subdirectory(01-02)
add_subdirectory(01-03)
add_subdirectory(01-04)
add_subdirectory(01-05)
add_subdirectory(01-06)
add_subdirectory(01-07)
add_subdirectory(01-08)
add_subdirectory(01-09)
add_subdirectory(01-10)
add_subdirectory(01-11)
add_subdirectory(01-12)
add_subdirectory(01-13)
add_subdirectory(01-14)
add_subdirectory(01-15)
add_subdirectory(01-16)
add_subdirectory(01-17)
add_subdirectory(01-18)
add_subdirectory(01-19)
add_subdirectory(01-20)
add_subdirectory(01-21)
add_subdirectory(01-22)
add_subdirectory(01-23)
add_subdirectory(01-24)
add_subdirectory(01-25)
