project(Chapter-03)
add_subdirectory(03-01)
add_subdirectory(03-02)
add_subdirectory(03-03)
add_subdirectory(03-04)
add_subdirectory(03-05)
add_subdirectory(03-06)
add_subdirectory(03-07)
add_subdirectory(03-08)
add_subdirectory(03-09)
add_subdirectory(03-10)
add_subdirectory(03-11)
add_subdirectory(03-12)
add_subdirectory(03-13)
add_subdirectory(03-14)
add_subdirectory(03-15)
add_subdirectory(03-16)
add_subdirectory(03-17)
add_subdirectory(03-18)
add_subdirectory(03-19)
add_subdirectory(03-20)
add_subdirectory(03-21)
add_subdirectory(03-22)
add_subdirectory(03-23)
add_subdirectory(03-24)
add_subdirectory(03-25)
add_subdirectory(03-26)
add_subdirectory(03-27)
add_subdirectory(03-28)
add_subdirectory(03-29)
add_subdirectory(03-30)
add_subdirectory(03-31)
add_subdirectory(03-32)
add_subdirectory(03-33)
add_subdirectory(03-34)
add_subdirectory(03-35)
add_subdirectory(03-36)
add_subdirectory(03-37)
add_subdirectory(03-38)
add_subdirectory(03-39)
add_subdirectory(03-40)
add_subdirectory(03-41)
add_subdirectory(03-42)
add_subdirectory(03-43)
add_subdirectory(03-44)
add_subdirectory(03-45)
