project(Chapter-05)
add_subdirectory(05-01)
add_subdirectory(05-02)
add_subdirectory(05-03)
add_subdirectory(05-04)
add_subdirectory(05-05)
add_subdirectory(05-06)
add_subdirectory(05-07)
add_subdirectory(05-08)
add_subdirectory(05-09)
add_subdirectory(05-10)
add_subdirectory(05-11)
add_subdirectory(05-12)
add_subdirectory(05-13)
add_subdirectory(05-14)
add_subdirectory(05-15)
add_subdirectory(05-16)
add_subdirectory(05-17)
add_subdirectory(05-18)
add_subdirectory(05-19)
add_subdirectory(05-20)
add_subdirectory(05-21)
add_subdirectory(05-22)
add_subdirectory(05-23)
add_subdirectory(05-24)
add_subdirectory(05-25)
