project(Chapter-06)
add_subdirectory(06-01)
add_subdirectory(06-02)
add_subdirectory(06-03)
add_subdirectory(06-04)
add_subdirectory(06-05)
add_subdirectory(06-06)
add_subdirectory(06-07)
add_subdirectory(06-08)
add_subdirectory(06-09)
add_subdirectory(06-10)
add_subdirectory(06-11)
add_subdirectory(06-12)
add_subdirectory(06-13)
add_subdirectory(06-14)
add_subdirectory(06-15)
add_subdirectory(06-16)
add_subdirectory(06-17)
add_subdirectory(06-18)
add_subdirectory(06-19)
add_subdirectory(06-20)
add_subdirectory(06-21)
add_subdirectory(06-22)
add_subdirectory(06-23)
add_subdirectory(06-24)
add_subdirectory(06-25)
add_subdirectory(06-26)
add_subdirectory(06-27)
add_subdirectory(06-28)
add_subdirectory(06-29)
add_subdirectory(06-30)
add_subdirectory(06-31)
add_subdirectory(06-32)
add_subdirectory(06-33)
add_subdirectory(06-34)
add_subdirectory(06-35)
add_subdirectory(06-36)
add_subdirectory(06-37)
add_subdirectory(06-38)
add_subdirectory(06-39)
add_subdirectory(06-40)
add_subdirectory(06-41)
add_subdirectory(06-42)
add_subdirectory(06-43)
add_subdirectory(06-44)
add_subdirectory(06-45)
add_subdirectory(06-46)
add_subdirectory(06-47)
add_subdirectory(06-48)
add_subdirectory(06-49)
add_subdirectory(06-50)
add_subdirectory(06-51)
add_subdirectory(06-52)
add_subdirectory(06-53)
add_subdirectory(06-54)
add_subdirectory(06-55)
add_subdirectory(06-56)
